# NDegreesOfWikipedia

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: Graph.h  WebCrawler.h  WebCrawlerManager.h
src/: Graph.cpp  WebCrawler.cpp  WebCrawlerManager.cpp  main.cpp
